Verbesserung des Codes, hinzufügen neuer WEB-API, neue Entität und Verbesserung des Readme und OpenAPI.json
