# code-with-quarkus/src/main/java/org/acme/blog/boundry/AuthorResource.java
@@ -2,8 +2,10 @@ package org.acme.blog.boundry;
 
 import org.acme.blog.control.AuthorService;
 import org.acme.blog.entity.Author;
+import org.acme.blog.repository.AuthorRepository;
 
 import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.POST;
 import jakarta.ws.rs.PUT;
@@ -18,6 +20,13 @@ public class AuthorResource {
     
     @Inject
     AuthorService authorService;
+
+     @Inject
+    AuthorRepository authorRepository;
+
+    public List<Author> getAllAuthors() {
+        return authorRepository.listAll();
+    }
 
     @GET
     public List<Author> getAuthors(){
@@ -38,5 +47,16 @@ public class AuthorResource {
             return Response.status(Response.Status.NOT_FOUND).entity("Author not found").build();
         }
         return Response.ok(updatedAuthor).build();
+    }
+
+    @Transactional
+    public Author updateAuthor(Long id, Author author) {
+        Author existingAuthor = authorRepository.findById(id);
+        if (existingAuthor != null) {
+            existingAuthor.setName(author.getName());
+            existingAuthor.setBiography(author.getBiography()); // Update Biografie
+            authorRepository.persist(existingAuthor);
+        }
+        return existingAuthor;
     }
 }
