# code-with-quarkus/src/main/java/org/acme/blog/entity/Blog.java
@@ -16,6 +16,7 @@ public class Blog {
     private Long id;
     private String title;
     private String content;
+    private String category;
 
     @ManyToOne
     public Author author;
@@ -25,11 +26,22 @@ public class Blog {
         this.content = content;
     }
     
-    
     public Blog(String title, String content, Author author) {
         this.title = title;
         this.content = content;
         this.author = author;
     }
+
+    public Blog(String title, String content, String category) {
+        this.title = title;
+        this.content = content;
+        this.category = category;
+    }
     
+    public Blog(String title, String content, String category, Author author) {
+        this.title = title;
+        this.content = content;
+        this.category = category;
+        this.author = author;
+    }
 }
